refactoring api controller + rewriting tests